# total-recall-industrial-anomaly-detection

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: ABLATIONS_DISTANCE_METRICS.md  BASELINE_LADDER.md  DATASETS.md  DEFECT_BANK_UNSUPERVISED.md  DEFECT_LOOKUP.md  DEV_CONFIG.md  EVAL_PROTOCOL.md  FROM_SCRATCH.md  GPU_ACCEL.md  IMAGE_CAPTURE_GUIDE.md  INDUSTRIAL_RIGOR_CHECKLIST.md  IVF.md  LEARNED_REFERENCE_SELECTION.md  LLM_TRIAGE_INTEGRATION.md  PAPER.md  PATCHCORE_VS_LLM.md  PDR_MODEL_DESIGN_REVIEW.md  PLAN.md  QA_WORKFLOW.md  QUERY_ADAPTIVE_MEMORY.md  RELATED_WORK.md  SWEEPS.md  TRAIN_ON_YOUR_DATA.md  USAGE.md  index.html
hybrid_memory_demo/: README.md  SETUP_KNOWN_FAILURES.md  __init__.py  app.html  benchmark.py  benchmark_mvtec_hybrid.py  build_nominal_router_demo.py  demo_common.py  demo_manifest.json  fit_folder_hybrid_memory.py  layout.py  model.py  pipeline.py  router.py  run_btad_demo.py  run_mvtec_bottle_demo.py  web.py
scripts/: ablate_distance_metrics_mvtec.py  btad_get.py  build_defect_bank_unsupervised_mvtec.py  calibrate_threshold.py  compare_speed.py  eval_btad_patchcore.py  eval_mvtec_patchcore.py  fetch_nominal_web_images.py  fit_mvtec_patchcore.py  fit_nominal_patchcore.py  fit_nominal_patchcore_routed.py  leakage_check_mvtec.py  mvtec_get.py  plot_experiments.py  review_dataset_examples.py  run_btad_ablation_matrix.py  run_btad_full_matrix.sh  run_btad_rigor_suite.py  run_mvtec_rigor_suite.py  score_images.py  score_images_multibank.py  score_images_routed.py  sweep_btad.py  viz_anomaly_maps.py
tests/: conftest.py  (+19 more)
(+52 files in other folders)
